# drorm-bind

./: .gitmodules  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml
porm/: _utils.py  ffi.py  ffi_enums.py  orm.py  rorm_ffi.py
rorm_python/: ffi.py  orm.py
src/: errors.rs  lib.rs  macros.rs  mysql.rs  postgres.rs  sqlite.rs  utils.rs
src/common/: mod.rs
