[package]
name = "rorm-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "rorm_python"
crate-type = ["cdylib"]

[dependencies]
# TODO: Determine which TLS library to use: tokio-native-tls vs. tokio-rustls
# TODO: Check out if the binary distribution easily runs on some Python test env without build tools!
rorm = { path = "./rorm/rorm", features = ["tokio-rustls"] }
pyo3 = { version = "0.16", features = ["extension-module"] }
pyo3-asyncio = { version = "0.16", features = ["tokio-runtime"] }
tokio = { version = "~1", features = ["full"] }
chrono = { version = "^0.4" }
toml = "0.5.9"
serde = "1.0.147"

[package.metadata.maturin]
name = "rorm_python.bindings"
